--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30389,17 +30389,26 @@ a {
 }
 
 .project_estate_club_rate{
-        width: 100px !important;
-    height: 20px;
+    right: -1px;
+    top: 113px;
+    width: 80px;
+    height: 30px;
+    border-bottom-left-radius: 15px;
+    border-top-left-radius: 15px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, .1);
+    background-color: #fff;
     position: absolute;
-    left: 0;
-    top: 10%;
-    z-index: 9;
-    background-color: white;
 }
 
 .project_estate_club_rate .club_rate {
-color:black;
+    font-size: 12px;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    margin-left: 4px;
+    font-weight: 700;
+    color: #ffbe00;
 }
 
 .project_brand_profile_image {
