"Added 'buysellurgent1' field to HomeController, updated styles.css, and modified menu-list.blade.php to display new field and adjust layout"

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3149,7 +3149,7 @@ section.portfolio {
     text-align: center;
     width: 70px !important;
     margin-top: 10px;
-    background-color: #EA2B2E !important;
+    background-color: black !important;
 }
 
 .portfolio .homes-price,
