"Update background color of .type-tag to black"

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29569,7 +29569,7 @@ font {
 }
 
 .type-tag {
-    background-color: #ea2a28 !important;
+    background-color: black !important;
     right: 10px;
     text-align: center;
     width: 50px !important;
