--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24593,21 +24593,17 @@ form label.error {
 
 
 .storeShareTypeBtn{
+    position: relative;
+    padding: 10px 22px;
+    border-radius: 6px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
+    transition: all 0.2s ease;
+
     width: 170px;
     height: 30px;
-    margin-right: 20px;
-    border: none; 
-    position: relative;
-    background-color: white;
-    border: 1px solid white;
-    display: flex;
-    border-radius: 0;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition-duration: .5s;
-    overflow: hidden;
-    position: relative;
 }
 
 .storeShareTypeBtn:before,
