--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -197,7 +197,7 @@ button {
 }
 
 .bank-account.selected {
-    border: 1px solid #ea2a28 !important;
+    border: 1px solid #ea2a28!important;
 }
 
 @media (max-width: 768px) {
@@ -1090,7 +1090,7 @@ img {
 }
 
 .text-theme-colored2 {
-    color: #ea2a28 !important;
+    color: #ea2a28!important;
 }
 
 .tp-caption.font-p {
@@ -1548,7 +1548,7 @@ section.recently.portfolio {
 
 
 .homes-tag.featured {
-    background: #ea2a28 !important;
+    background: #ea2a28!important;
     text-align: center;
     padding: 5px;
     font-size: 11px;
@@ -1578,7 +1578,7 @@ section.recently.portfolio {
 }
 
 .recently .homes-tag.sale {
-    background: #ea2a28 !important;
+    background: #ea2a28!important;
     width: 84px !important;
     height: 31px;
 }
@@ -3158,7 +3158,7 @@ section.portfolio {
 }
 
 .portfolio .homes-tag.sale {
-    background: #ea2a28 !important;
+    background: #ea2a28!important;
     width: 84px !important;
     height: 31px;
 }
@@ -8551,7 +8551,7 @@ html input[disabled] {
 
     .itemCircleFont {
         font-size: 11px;
-        margin-left: 10px;
+        margin-left:10px;
     }
 
     .button-tabs .tab-title {
@@ -12544,7 +12544,7 @@ section.featured.home15 {
 }
 
 .featured.home15 .homes-tag.sale {
-    background: #ea2a28 !important;
+    background: #ea2a28!important;
     width: 84px !important;
     height: 36px;
 }
@@ -17694,8 +17694,8 @@ section.headings-2 {
     color: #76716f;
 }
 
-.listing-title-bar {
-    margin-left: 10px
+.listing-title-bar{
+    margin-left:10px
 }
 
 .inner-pages .headings-2 .listing-title-bar h3 {
@@ -24591,7 +24591,6 @@ form label.error {
     position: relative;
 }
 
-
 .storeShareTypeBtn {
     position: relative;
     width: 170px;
@@ -24616,7 +24615,7 @@ form label.error {
     background-repeat: no-repeat;
 }
 
-.storeShareTypeBtn:hover:before {
+.storeShareTypeBtn:before {
     top: -70%;
     background-image: radial-gradient(circle, #a89215 20%, transparent 20%),
         radial-gradient(circle, transparent 20%, #13a5be 20%, transparent 30%),
@@ -24630,7 +24629,7 @@ form label.error {
     background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%,
         10% 10%, 18% 18%;
     background-position: 50% 120%;
-    animation: greentopBubbles 0.6s ease;
+    animation: greentopBubbles 0.6s ease infinite;
 }
 
 @keyframes greentopBubbles {
@@ -24651,7 +24650,7 @@ form label.error {
     }
 }
 
-.storeShareTypeBtn:hover::after {
+.storeShareTypeBtn:after {
     bottom: -70%;
     background-image: radial-gradient(circle, #ff93db 20%, transparent 20%),
         radial-gradient(circle, #2ae8df 20%, transparent 20%),
@@ -24662,7 +24661,7 @@ form label.error {
         radial-gradient(circle, #f8d3a9 20%, transparent 20%);
     background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 20% 20%, 18% 18%;
     background-position: 50% 0%;
-    animation: greenbottomBubbles 0.6s ease;
+    animation: greenbottomBubbles 0.6s ease infinite;
 }
 
 @keyframes greenbottomBubbles {
@@ -24679,7 +24678,7 @@ form label.error {
     100% {
         background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%,
             110% 10%;
-        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+        background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
     }
 }
 
@@ -25255,8 +25254,8 @@ form label.error {
 
 #search-icon,
 #search-icon2 {
-    background: #ea2a28 !important;
-    border: #ea2a28 !important;
+    background: #ea2a28!important;
+    border: #ea2a28!important;
 }
 
 .google-maps .fa-search {
@@ -30484,7 +30483,7 @@ a {
     justify-content: center;
 }
 
-.project_estate_club_rate {
+.project_estate_club_rate{
     right: -1px;
     top: 113px;
     width: 120px;
@@ -30805,26 +30804,26 @@ a {
     font-weight: bold;
 }
 
-.ql-align-center {
-    text-align: center;
+.ql-align-center{
+	text-align:center;
 }
 
 .descriptionProject h2 {
     font-size: 1.5em !important;
-    margin: 0;
-    padding: 0;
+	margin:0;
+	padding :0 ;
 }
 
 .descriptionProject p {
-    margin: 0;
-    padding: 0;
-    counter-set: list-0 list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+	margin:0;
+	padding : 0;
+	counter-set: list-0 list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
 }
 
 .descriptionProject h1 {
     font-size: 2em !important;
-    margin: 0;
-    padding: 0;
+	margin:0;
+	padding :0 ;
 }
 
 .descriptionProject h3 {
