--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24599,8 +24599,9 @@ form label.error {
     border: none;
     color: #fff;
     cursor: pointer;
-    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
-    transition: all 0.2s ease;
+    background-color: white;  
+    color:black;
+      transition: all 0.2s ease;
     margin-right: 20px;
 }
 
