--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -596,7 +596,6 @@ img {
 .brand-head .brands-square {
     display: flex;
     align-items: center;
-    margin-left: 20px;
 }
 
 .brand-head .brand-logo {
@@ -607,8 +606,7 @@ img {
 }
 
 .brand-head .brand-name {
-    margin-left: 10px !important;
-    margin-right: 0 !important;
+    margin-right: 10px !important;
     font-weight: 600;
     font-size: 11px;
     margin: 0;
