--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,7 +9,7 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 11px;
     font-weight: 400;
-    color: #666;
+    color: black;
     overflow-x: hidden !important;
 }
 
