--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -610,7 +610,7 @@ img {
     font-weight: 600;
     font-size: 11px;
     margin: 0;
-    padding: 0;
+    padding: 0px 5px;
     color: white;
 }
 
