"Added styles for .modal-footer and updated .btn height"

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24548,6 +24548,10 @@ form label.error {
     width: 200px;
 }
 
+.modal-footer{
+    border-top: 0 !important;
+}
+
 .btn {
     height: 40px !important;
 }
