--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30836,3 +30836,12 @@ a {
     font-size: 1.17em !important;
 }
 
+.badge-phoenix-warning{
+
+    width: 100%;
+    font-size: 10px;
+    padding: 8px 0;
+    border: 1px solid #ffcc85;
+    color:#bc3803;
+    background-color:#ffefca
+}
