--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27287,6 +27287,7 @@ h4 {
     margin: 0 auto;
     max-width: 100%;
     height: 50px;
+    object-fit: cover;
 }
 
 .portfolio .project-head span {
