--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27291,7 +27291,7 @@ h4 {
 }
 
 @media (max-width: 768px){
-    .home-top-banner img{
+    .home-top-banner{
         display: none !important;
     }
 }
