"Updated CSS selector in media query from '.home-top-banner' to '.homeTopBanner'"

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27291,7 +27291,7 @@ h4 {
 }
 
 @media (max-width: 768px){
-    .home-top-banner{
+    .homeTopBanner{
         display: none !important;
     }
 }
