--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9029,6 +9029,8 @@ a.button {
     section.recently.portfolio {
         margin-top: 30px !important;
         padding-top: 0 !important;
+        margin-bottom: 0 !important;
+        padding-bottom: 0 !important;
     }
 }
 
