--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23583,7 +23583,7 @@ a.btn_1 {
     }
 
     .section-title {
-        margin-bottom: 20px !important;
+        margin-bottom: 0 !important;
         padding-bottom: 0 !important;
     }
 
