--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16540,10 +16540,10 @@ a.button {
     border: none;
     /* right: 0; */
     width: 100%;
-    text-align:center !important;
+    text-align: center !important;
     text-align: -webkit-center
-    /* position: absolute; */
-    /* top: 0; */
+        /* position: absolute; */
+        /* top: 0; */
 
 }
 
@@ -21074,7 +21074,7 @@ body.dashboard-bd {
     padding: 15px 20px 15px 20px;
     vertical-align: middle;
     font-size: 11px;
-    
+
 }
 
 .my-properties table h2 {
@@ -23580,6 +23580,10 @@ a.btn_1 {
 @media (max-width: 768px) {
     .marginLeftRightZero {
         padding: 0 !important;
+    }
+
+    .mobileSectionTitle {
+        text-align: center;
     }
 
     .section-title {
@@ -27292,8 +27296,8 @@ h4 {
     object-fit: cover;
 }
 
-@media (max-width: 768px){
-    .homeTopBanner{
+@media (max-width: 768px) {
+    .homeTopBanner {
         display: none !important;
     }
 }
@@ -30847,30 +30851,30 @@ a {
     font-size: 1.17em !important;
 }
 
-.badge-phoenix-warning{
+.badge-phoenix-warning {
 
     width: 100%;
     font-size: 10px;
     padding: 8px 0;
     border: 1px solid #ffcc85;
-    color:#bc3803;
-    background-color:#ffefca
+    color: #bc3803;
+    background-color: #ffefca
 }
 
-.badge-phoenix-info{
+.badge-phoenix-info {
     width: 100%;
     font-size: 10px;
     padding: 8px 0;
     border: 1px solid #96d9ff;
-    color:#005585;
-    background-color:#c7ebff
+    color: #005585;
+    background-color: #c7ebff
 }
 
-.badge-phoenix-success{
+.badge-phoenix-success {
     width: 100%;
     font-size: 10px;
     padding: 8px 0;
     border: 1px solid #bee8b4;
-    color:#1c6c09;
-    background-color:#d9fbd0
+    color: #1c6c09;
+    background-color: #d9fbd0
 }
