"Removed styles for .section-title and added justify-content to .mobileSectionTitle"

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23584,12 +23584,9 @@ a.btn_1 {
 
     .mobileSectionTitle {
         text-align: center;
+        justify-content: center;
     }
 
-    .section-title {
-        margin-bottom: 0 !important;
-        padding-bottom: 0 !important;
-    }
 
     .circleIcon {
         font-size: 5px;
