"Updated height property of .brand-image-pp from 100% to 52px"

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3485,7 +3485,7 @@ section.portfolio {
 .brand-image-pp {
     width: 52px;
     z-index: 2;
-    height: 100% !important;
+    height: 52px !important;
     object-fit: cover;
     margin: 0 auto;
     border-radius: 50%;
