"Updated middleware to include new route, modified CSS styles, and refactored sharer panel index blade template with added breadcrumb and collection display changes."

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24557,6 +24557,11 @@ form label.error {
 
 .btn {
     height: 40px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    margin: 0 auto;
 }
 
 .see-my-neighbor {
