--- a/public/css/colors/dark-gray.css
+++ b/public/css/colors/dark-gray.css
@@ -324,7 +324,7 @@ a.button {
 }
 
 .inner-pages .port-info .btn {
-    background: #fa2964;
+    background: #EA2B2E;
     border: 1px solid black;
 }
 
