--- a/public/css/map.css
+++ b/public/css/map.css
@@ -145,7 +145,7 @@ section.d-map {
 
 .map-animation-right .btn.btn-outline-light {
     background: #fff;
-    color: #fa2964;
+    color: #EA2B2E;
 }
 
 .map-marker-block .map-bg {
