--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30873,7 +30873,7 @@ a {
 
     width: 100%;
     font-size: 10px;
-    padding: 8px 0;
+    padding: 8px 10px;
     border: 1px solid #ffcc85;
     color: #bc3803;
     background-color: #ffefca
@@ -30882,7 +30882,7 @@ a {
 .badge-phoenix-info {
     width: 100%;
     font-size: 10px;
-    padding: 8px 0;
+    padding: 8px 10px;
     border: 1px solid #96d9ff;
     color: #005585;
     background-color: #c7ebff
@@ -30891,7 +30891,7 @@ a {
 .badge-phoenix-success {
     width: 100%;
     font-size: 10px;
-    padding: 8px 0;
+    padding: 8px 10px;
     border: 1px solid #bee8b4;
     color:#1c6c09;
     background-color:#d9fbd0
