--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31542,3 +31542,186 @@ li::after {
     color: #1c6c09;
     background-color: #d9fbd0
 }
+
+.pinned-left{
+    width: 10%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 15px 0 15px 15px;
+    border-right: 1px solid #f1f1f1;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+}
+
+.pinned-left span{
+    display: inline-block;
+    width: 50%;
+}
+
+.project-housings-table-head{
+    width: 100%;
+    display: flex;
+    position: relative;
+    border: 1px solid #C7BBBB;
+    background: #fff;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.center-scroll {
+    overflow: auto;
+    white-space: nowrap;
+    margin-left: 10%;
+    margin-right: 8%;
+    padding: 15px 0 15px 30px;
+    width: 100%;
+  }
+
+  .center-scroll span {
+    width: 15%;
+    display: inline-block;
+    padding-left: 5px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    vertical-align: middle;
+  }
+
+  .pinned-right{
+    width: 8%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 15px 15px 15px 0;
+    border-left: 1px solid #f1f1f1;
+    text-align: right;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    align-items: center;
+  }
+
+  #style-x::-webkit-scrollbar-track
+    {
+        -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+        border-radius: 5px;
+        background-color: #F5F5F5;
+    }
+
+    #style-x::-webkit-scrollbar
+    {
+        width: 5px;
+        height: 5px;
+        background-color: #F5F5F5;
+    }
+
+    #style-x::-webkit-scrollbar-thumb
+    {
+        border-radius: 5px;
+        -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,.3);
+        background-color: #D62929;
+    }
+
+    .project-housings-table-row{
+        width: 100%;
+        display: flex;
+        position: relative;
+        border: 1px solid #C7BBBB;
+        background: #fff;
+        border-radius: 5px;
+        overflow: hidden;
+        margin-top: 10px;
+    }
+
+    .sale-open-text{
+        color: green !important;
+        margin: 0;
+    }
+
+    .sale-close-text{
+        color: #9d7e23 !important;
+        margin: 0;
+    }
+
+    .sale-text{
+        color: #EA2B2E !important;
+        margin: 0;
+    }
+
+    .pay-decs-button{
+        padding: 5px 10px;
+        border-radius: 3px;
+        background: #ea2a28;
+        font-size: 9px;
+        color: #fff;
+        cursor: pointer;
+        margin: 0;
+    }
+
+    .pay-decs-button p{
+        margin: 0;
+        line-height: 13px;
+    }
+
+    .table-row-image img{
+        max-width: 80%;
+    }
+
+    .sold-item{
+        top: 50%;
+        left: 50%;
+        transform: translate(-100%, 0%) rotate(-45deg);
+        font-size: 2em;
+        color: #fff;
+        white-space: nowrap;
+        animation: moveText 3s linear infinite;
+        font-size: 16px;
+        color: #e77878;
+    }
+
+    .sold-area{
+        position: absolute;
+        width: 82%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        display: grid;
+        grid-template-columns: repeat(15, 1fr);
+        grid-template-rows: repeat(15, 1fr);
+        gap: 5px;
+        background: #e33434;
+        z-index: 9999;
+        margin-left: 10%;
+        margin-right: 8%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .sold-area2{
+        position: absolute;
+        width: 82%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        display: grid;
+        grid-template-columns: repeat(15, 1fr);
+        grid-template-rows: repeat(15, 1fr);
+        gap: 5px;
+        z-index: 9999;
+        margin-left: 10%;
+        margin-right: 8%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .sold-area .customer-info{
+        color: #fff;
+        font-size: 12px;
+        position: relative;
+        z-index: 99999;
+    }
